--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   color: rgb(0, 0, 0);
   font-family: "SF Pro", Arial, sans-serif;
 }
+
 .title.active {
   color: whitesmoke;
 }
@@ -47,6 +48,7 @@ body {
   box-shadow: 0px 0px 0px rgb(6, 6, 6);
   font-family: "SF Pro", Arial, sans-serif;
 }
+
 /* Aonde fica a camera frontal do iphone */
 .calculator-container .Container-cam {
   width: 200px;
@@ -82,6 +84,7 @@ body {
   padding-left: 30px;
   text-align: left;
 }
+
 #operator-orange {
   background-color: orange;
   color: whitesmoke;
@@ -106,9 +109,11 @@ body {
   0% {
     opacity: 1;
   }
+
   50% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -146,9 +151,11 @@ body {
 .button {
   transition: background-color 0.3s;
 }
+
 .button:active {
   background-color: #716a6a;
 }
+
 .button {
   outline: none;
 }
@@ -178,17 +185,17 @@ body {
   display: inline-block;
   width: 60px;
   height: 34px;
-  right: -680px;
+  right: -56%;
   top: 40px;
-  
+
 }
 
 .switch input {
-  opacity: 0;
+  opacity: 10%;
   width: 0;
   height: 0;
   right: 0;
-  
+
 }
 
 .slider {
@@ -198,7 +205,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #f1eeee;
+  background-color: #ff0000;
   transition: 0.4s;
   border-radius: 34px;
 }
@@ -215,11 +222,12 @@ body {
   border-radius: 50%;
 }
 
-input:checked + .slider {
-  background-color: #2196f3; /* Cor do fundo no modo escuro */
+input:checked+.slider {
+  background-color: #2196f3;
+  /* Cor do fundo no modo escuro */
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
   transform: translateX(26px);
 }
 
@@ -229,4 +237,13 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+.modo-Claro {
+  opacity: 0;
+}
+
+.modo-Escuro {
+  opacity: 100;
+  color: whitesmoke
 }
